tests/variable/unreachable_undefined.rev
if false {
    print notDefined // error: undeclared variable 'notDefined'
}